fix extra padding

--- a/styles/containers.css
+++ b/styles/containers.css
@@ -3,7 +3,6 @@
 html,
 body {
 	margin: 0;
-	padding: 0;
 	width: 100%;
 	height: 100%;
 	box-sizing: border-box;
@@ -12,6 +11,10 @@ body {
 	display: flex;
 	flex-direction: column;
 	color: white;
+
+	@media screen and (max-width: 768px) {
+		font-size: 14px;
+	}
 }
 
 .header {
@@ -37,10 +40,11 @@ body {
 		color: var(--color-text);
 		text-decoration: none;
 	}
+
 	a:hover {
 		text-decoration: underline;
 	}
-	
+
 }
 
 .nav-buttons {
@@ -57,6 +61,7 @@ body {
 	flex-direction: column;
 	align-items: center;
 	width: 100%;
+	box-sizing: border-box;
 	overflow-y: scroll;
 	flex: 1;
 	padding: .5rem 1rem;
@@ -67,6 +72,10 @@ body {
 		flex-direction: column;
 		height: 1000px;
 		width: 100%;
+
+		h2 {
+			text-transform: capitalize;
+		}
 	}
 
 }
